fix: crac flow